--- a/StationDemoClient/station-angular4-poc/src/assets/i18n/en.json
+++ b/StationDemoClient/station-angular4-poc/src/assets/i18n/en.json
@@ -1,12 +1,15 @@
 {
     "HELLO_MESSAGE": "Search station (User : {{givenName}}) -- ",
     "LOGOUT": "Logout",
-    "NETWORK_SEARCH": "Network",
-    "STATION_SEARCH": "Station",
-    "TRAFFIC_MIN_SEARCH": "Min traffic",
-    "TRAFFIC_MAX_SEARCH": "Max traffic",
-    "TRAFFIC_CITY_SEARCH": "City",
-    "SEARCH_BUTTON": "Search"
+    "NETWORK_LABEL": "Network",
+    "STATION_LABEL": "Station",
+    "TRAFFIC_MIN_LABEL": "Min traffic",
+    "TRAFFIC_LABEL": "Traffic",
+    "TRAFFIC_MAX_LABEL": "Max traffic",
+    "CORRESPOND_LABEL": "Correspond",  
+    "CITY_LABEL": "City",
+    "SEARCH_BUTTON": "Search",
+    "ARRONDISS_LABEL": "Arrond"
     
     
 }
