--- a/StationDemoClient/station-angular4-poc/src/assets/i18n/fr.json
+++ b/StationDemoClient/station-angular4-poc/src/assets/i18n/fr.json
@@ -1,14 +1,15 @@
 {
     "HELLO_MESSAGE": "Recherche station (Utilisateur : {{givenName}}) -- ",
     "LOGOUT": "Déconnexion",
-    "NETWORK_SEARCH": "Réseau",
-    "STATION_SEARCH": "Station",
-    "TRAFFIC_MIN_SEARCH": "Traffic min",
-    "TRAFFIC_MAX_SEARCH": "Traffic max",
-    "TRAFFIC_CITY_SEARCH": "Ville",
-    "SEARCH_BUTTON": "Rechercher"
-    
-    
+    "NETWORK_LABEL": "Réseau",
+    "STATION_LABEL": "Station",
+    "TRAFFIC_MIN_LABEL": "Traffic min",
+    "TRAFFIC_LABEL": "Traffic",
+    "TRAFFIC_MAX_LABEL": "Traffic max",
+    "CORRESPOND_LABEL": "Correspond",
+    "TRAFFIC_CITY_LABEL": "Ville",
+    "SEARCH_BUTTON": "Rechercher",
+    "ARRONDISS_LABEL": "Arrond"
     
 
 }
